--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,16 @@
 {
-  "name": "linkedin comunication",
-  "description": "Extract Profile Yeh!",
-  "version": "1.1",
   "manifest_version": 3,
+  "name": "Bootcamp Information from linkedin",
+  "version": "1.1",
+  "description": "Get Information from contact profiles",
   "content_scripts": [
     {
       "matches": ["https://www.linkedin.com/*"],
       "js": ["./app.js"]
     }
   ],
-  "action":{
-    "default_popup":"./App/index.html",
-    "default_icon": {
-      "32": "./App/Image/32.png",
-      "48": "./App/Image/48.png"
-    }
+  "action": {
+      "default_popup": "./App/index.html"
   },
-  "permissions": ["activeTab", "scripting"],
-  "icons": {
-    "32": "./App/Image/32.png",
-    "48": "./App/Image/48.png"
-  }
+  "permissions": ["activeTab", "scripting", "storage"]
 }
