--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
   "content_scripts": [
     {
       "matches": ["https://www.linkedin.com/*"],
-      "js": ["./app.js"]
+      "js": [
+        "./app.js"
+      ]
     }
   ],
   "action":{
